--- a/config/git/config
+++ b/config/git/config
@@ -14,6 +14,7 @@
 
 [commit]
 	template = ~/.dotfiles/config/git/commit-template
+	gpgsign = true
 
 [pull]
   rebase = false
@@ -24,6 +25,16 @@
 
 [mergetool "vimdiff"]
 	cmd = nvim -c DiffviewOpen
+
+[column]
+	ui = auto
+
+[branch]
+	sort = -committerdate
+
+[maintenance]
+	auto = false
+	strategy = incremental
 
 [init]
 	defaultBranch = main
