--- a/config/qt5ct/qt5ct.conf
+++ b/config/qt5ct/qt5ct.conf
@@ -1,3 +1,5 @@
+# replace style=gtk2 with style=gtk3
+
 [Appearance]
 color_scheme_path=/home/mh/.config/qt5ct/colors/nordic.conf
 custom_palette=true
