--- a/config/hypr/hyprland.conf
+++ b/config/hypr/hyprland.conf
@@ -212,25 +212,77 @@ bindm = $mod, mouse:272, movewindow
 bindm = $mod, mouse:273, resizewindow
 
 # Window rules
-windowrulev2 = float, class:^(ssh-askpass)$
-windowrulev2 = float, class:^(pinentry-.*)$
-windowrulev2 = float, class:^(pavucontrol)$
-windowrulev2 = float, title:^(Picture-in-Picture)$
-windowrulev2 = float, title:^(Open Files)$
+windowrule {
+  name = ssh-askpass-float
+  float = on
+  match:class = ^(ssh-askpass)$
+}
+
+windowrule {
+  name = pinentry-float
+  float = on
+  match:class = ^(pinentry-.*)$
+}
+
+windowrule {
+  name = pavucontrol-float
+  float = on
+  match:class = ^(pavucontrol)$
+}
+
+windowrule {
+  name = picture-in-picture-float
+  float = on
+  match:title = ^(Picture-in-Picture)$
+}
+
+windowrule {
+  name = file-dialogs-float
+  float = on
+  match:title = ^(Open Files)$
+}
+
 
 # Window rules for JetBrains IDEs running in Wayland mode
 #
 # Prevent tooltips from taking focus (always have a title of `win.<id>`)
-windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^(win.*)$
+windowrule {
+  name = jetbrains-tooltips-no-focus
+  no_initial_focus = on
+  match:class = ^(.*jetbrains.*)$
+  match:title = ^(win.*)$
+}
 # Make "Go to file" and other dialogs always focused when open
-windowrulev2 = stayfocused, class:^(.*jetbrains.*)$, title:^$, floating:1
+windowrule {
+  name = jetbrains-dialogs-stay-focused
+  stay_focused = on
+  match:class = ^(.*jetbrains.*)$
+  match:title = ^$
+  match:float = 1
+}
 # fix tab dragging (always have a single space character as their title)
-windowrulev2 = noinitialfocus, class:^(.*jetbrains.*)$, title:^\\s$
+windowrule {
+  name = jetbrains-tab-drag-no-focus
+  no_initial_focus = on
+  match:class = ^(.*jetbrains.*)$
+  match:title = ^\\s$
+}
 # Tile new tabs automatically
-windowrulev2 = tile, class:^(jetbrains-*), floating:0
+windowrule {
+  name = jetbrains-tabs-tile
+  tile = on
+  match:class = ^(jetbrains-*)
+  match:float = 0
+}
 
 # Flameshot
-windowrulev2 = move 0 0, class:(flameshot), title:(flameshot)
-windowrulev2 = pin, class:(flameshot), title:(flameshot)
-windowrulev2 = fullscreenstate, class:(flameshot), title:(flameshot)
-windowrulev2 = float, class:(flameshot), title:(flameshot)
+windowrule {
+  name = flameshot-fullscreen
+  move = (0) (0)
+  pin = on
+  fullscreen_state = on
+  float = on
+  match:class = (flameshot)
+  match:title = (flameshot)
+}
+
