feat(nvim): add new plugins and update configurations
Integrates nvim-navic for LSP breadcrumbs, nvim-treesitter-context for code
context, vim-matchup for improved matching, and nvim-treesitter-endwise.
Updates nvim-treesitter to include HTML parser and refines nvim-colorizer setup.

Also removes the deprecated Gemini mcpServers config and updates the Glow style path.

--- a/config/glow/glow.yml
+++ b/config/glow/glow.yml
@@ -1,5 +1,5 @@
 # Nord theme for glow
-style: "nord.json"
+style: "~/.config/glow/nord.json"
 
 # show local files only; no network (TUI-mode only)
 local: false
